# qt-rest-client

./: .gitignore  CMakeLists.txt  HttpRequestWorker.cpp  HttpRequestWorker.h  LICENSE  README.md  RESTclient.pri  main.cpp  mainwindowe.cpp  mainwindowe.h  restClient.pro
test/: main.cpp  rest_client_test.cpp  rest_client_test.h  rest_client_test.pro
